--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,10 @@
 title: My blog
 SEOTitle: 🏊🏼‍♀️
 email: WZHOU007@e.ntu.edu.sg
-description: 'my journey to data science 👧🏽'
-url: "http://WZHOU007-0912.github.io" 
-
+description: >- # this means to ignore newlines until "baseurl:"
+  my journey to data science 👧🏽
+# baseurl: "/" # the subpath of your site, e.g. /blog
+# url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: WZHOU007-0912
 highlighter: rouge
 svg:
