--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: My blog
+title: Zhou Wei
 SEOTitle: 🏊🏼‍♀️
-email: WZHOU007@e.ntu.edu.sg
+{{ site.email }}: WZHOU007@e.ntu.edu.sg
 description: >- # this means to ignore newlines until "baseurl:"
   my journey to data science 👧🏽
 # baseurl: "/" # the subpath of your site, e.g. /blog
