--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,13 @@
 
 title: Zhou Wei
 SEOTitle: 🏊🏼‍♀️
-{{ site.email }}: WZHOU007@e.ntu.edu.sg
+email : WZHOU007@e.ntu.edu.sg
 description: >- # this means to ignore newlines until "baseurl:"
   my journey to data science 👧🏽
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: WZHOU007-0912
+
 highlighter: rouge
 svg:
   optimize: true
@@ -36,7 +37,7 @@ date_format: "%Y-%M-%D"
 plugins:
   - jekyll-feed
 category_dir: category/
-tag_dir: tag/
+#tag_dir: tag/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
