--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,7 @@ svg:
 # theme: minima
 highlighter-theme: monokai
 date_format: "%Y-%M-%D"
-plugins:
-  - jekyll-feed
+plugins: [jekyll-paginate, jekyll-jupyter-notebook]
 category_dir: category/
 #tag_dir: tag/
 
