--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ blog_button:
     description: Visit blog
 
 # Navigation buttons in the front page.
-nav:
-    - {title: Projects, description: My Projects, url: 'http://project.onevcat.com'}
+#nav:
+   # - {title: Projects, description: My Projects, url: 'http://project.onevcat.com'}
     # - {title: Another Button, description: A button, url: 'http://example.com'}
 
 # Pagination
@@ -31,8 +31,8 @@ paginate: 10
 paginate_path: "page/:num/"
 
 # Comment
-comment:
-    disqus: vno-jekyll
+#comment:
+    #disqus: vno-jekyll
     # duoshuo: 
     
 # Social
@@ -44,6 +44,6 @@ social:
     mail: WZHOU007@e.ntu.edu.sg
 
 # Google Analytics
-ga:
+# ga:
     # id: your_ga_id
     # host: your_host
