--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ comment:
     
 # Social
 social:
-    weibo: Natasumushi
-    github: https://github.com/WZHOU007-0912
+    weibo: natasumushi
+    github: WZHOU007-0912
     #twitter: onevcat
     #gplus: 107108267983477358170
     mail: WZHOU007@e.ntu.edu.sg
