--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ permalink: /:year/:month/:title/
 highlighter: rouge
 
 markdown: kramdown
+mathjax: true
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
 cover_color: 
