--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,10 @@ permalink: /:year/:month/:title/
 highlighter: rouge
 
 markdown: kramdown 
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+  
 mathjax: true
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
